fix sizing issue on mobile add form

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -852,6 +852,18 @@ video {
   height: 75px;
 }
 
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -1343,6 +1355,18 @@ video {
 
   .sm\:h-\[30vh\] {
     height: 30vh;
+  }
+
+  .sm\:h-\[140px\] {
+    height: 140px;
+  }
+
+  .sm\:h-\[1200px\] {
+    height: 1200px;
+  }
+
+  .sm\:h-\[120px\] {
+    height: 120px;
   }
 
   .sm\:w-\[30vw\] {
